clang/test/BSC/Negative/Trait/r3/trait_is_undefined/trait_is_undefined.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

_Trait F {
  int foo(This* this);
};

int int::foo(int* this) {
  return 0;
}

_Impl _Trait F for int;

_Trait F* get(_Trait T* t) { // expected-warning {{declaration of '_Trait T' will not be visible outside of this function}}
// expected-error@-1 {{'_Trait T' must be defined before it can be used}}
  int a = 6;
  _Trait F* f = &a;
  _Trait F* f2 = (_Trait F*)&a;
  ((_Trait F*)&a)->foo();

  int* c = &a;
  return c;
}

struct S{
  _Trait F* f;
  _Trait T* t; // expected-error {{'_Trait T' must be defined before it can be used}}
};

_Trait T* test(){ // expected-error {{'_Trait T' must be defined before it can be used}}
  int a = 6;
  _Trait T* t = &a; // expected-warning {{incompatible pointer types initializing '_Trait T *' with an expression of type 'int *'}}
  _Trait T* t2 = (_Trait T*)&a;

  int* c = &a;
  return c; // expected-error {{expected a pointer type which has implemented '_Trait T', found 'int'}}
};

int main() {
  return 0;
}